--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         
         <!-- The user can add a new food item here -->
-        <p>New picture: <input class="picture-url" size="60" ></p>
+        <p>New picture image address: <input class="picture-url" size="60" ></p>
         <button class="add">Add</button>
   </body>
 </html>
