--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <!-- The user can add a new food item here -->
         <p>New picture image address: <input class="picture-url" size="60" ></p>
         <button class="add">Add</button>
+         <script src="script.js"></script>
   </body>
 </html>
